fix the scrollbars on who to follow and channel following panes

--- a/app/assets/stylesheets/player/remote_control_pane.css.scss
+++ b/app/assets/stylesheets/player/remote_control_pane.css.scss
@@ -261,13 +261,6 @@
     .channels {
       margin: 0;
       padding: 0;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      overflow-y: scroll;
-      overflow-x: hidden;
 
       li {
         position: relative;
